<resources>
    <string name="app_name">ExpertOfEnglish</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">英語の達人</string>
    <string name="title_activity_mode_select">ModeSelect</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_score">ScoreActivity</string>

    <!--activity_mode_select.xml-->
    <string name="btnWordMode">単語編</string>
    <string name="btnDailyTalkMode">日常会話編</string>
    <string name="btnNetSlangMode">ネットスラング編</string>
    <string name="btnBusinessMode">ビジネス編</string>
    <string name="btnScoreShow">スコア</string>

    <!--activity_score.xml-->
    <string name="tv_total_score">総合平均</string>
    <string name="labelTotalAverage"><u>○○.○○点</u></string>
    <string name="tv_average">平均点</string>
    <string name="tv_max_score">最高得点</string>
    <string name="tv_word">単語編</string>
    <string name="tv_daily">日常会話編</string>
    <string name="tv_slang">ネットスラング編</string>
    <string name="tv_business">ビジネス編</string>
    <string name="labelWordModeAve"><u>""</u></string>   <!--文字が入ると下線がつきます -->
    <string name="labelWordModeMaxScore"><u>""</u></string>   <!--文字が入ると下線がつきます -->
    <string name="labelDailyModeAve"><u>""</u></string>  <!--文字が入ると下線がつきます -->
    <string name="labelDailyModeMaxScore"><u>""</u></string>  <!--文字が入ると下線がつきます -->
    <string name="labelSlangModeAve"><u>""</u></string>  <!--文字が入ると下線がつきます -->
    <string name="labelSlangModeMaxScore"><u>""</u></string>  <!--文字が入ると下線がつきます -->
    <string name="labelBusinessModeAve"><u>""</u></string>   <!--文字が入ると下線がつきます -->
    <string name="labelBusinessModeMaxScore"><u>""</u></string>   <!--文字が入ると下線がつきます -->
</resources>
